mash: Fix ShelfView GetIdealBoundsOfItemIcon helper and enable test

Make GetIdealBoundsOfItemIcon handle overflow correctly.
Enable RootWindowControllerTest.MoveWindows_Basic in Mash.
(mash adds overflow shelf items for the widgets in that test)

Bug: 814015
Test: Automated; windows minimize to shelf item or overflow button.
Change-Id: I3529f898c8201fe7fa0e2f34ecfe008c2a029272
Reviewed-on: https://chromium-review.googlesource.com/956096
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541971}
Former-commit-id: bd195233eebe960a1062c0a78bd679af2b71f928